sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:3: error: not found: value getNombreIndices
  for (c <- getTrouIndice()+1 to getNombreIndices()-1) {
                                 ^